--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
 st-annotated-text==4.0.0
+st-pages==0.4.1
 streamlit-camera-input-live==0.2.0
 streamlit-card==0.0.4
 streamlit-custom-notification-box==0.1.2
