--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ Pillow==9.5.0
 pip==21.3.1
 protobuf==4.23.2
 pyarrow==12.0.0
-pydeck==0.8.1b0
+pydeck==0.8.0
 Pygments==2.15.1
 pymdown-extensions==10.0.1
 Pympler==1.0.1
@@ -68,7 +68,7 @@ six==1.16.0
 smmap==5.0.0
 soupsieve==2.4.1
 st-annotated-text==4.0.0
-st-pages==0.4.0
+st-pages==0.4.1
 streamlit-camera-input-live==0.2.0
 streamlit-card==0.0.4
 streamlit-custom-notification-box==0.1.2
