--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ favicon==0.7.0
 Fiona==1.9.4.post1
 fonttools==4.40.0
 geographiclib==2.0
-geopandas==0.13.2
+geopandas~=0.13.0
 geopy==2.3.0
 gitdb==4.0.10
 GitPython==3.1.31
@@ -94,3 +94,5 @@ validators==0.20.0
 watchdog==3.0.0
 wheel==0.40.0
 zipp==3.15.0
+cython==0.29.35
+networkit~=10.1
